# Stuff

./: .gitignore
co1/lab10_sem2/: testBase
co1/lab10_sem2/model/: classes.hpp  database.hpp  interfaces.hpp
co1/lab10_sem2/model/utils/: search.hpp  utils.cpp  utils.hpp
co1/lab1_2/: func1.cpp  func2.cpp
co1/lab3/: test.cpp
co1/lab5/: main.cpp
co1/lab6_sem1/: Makefile  main.cpp  menuUtils.cpp  structUtils.cpp  utils.cpp
co1/lab7/: co1lab7.h
co1/lab8/: co1lab8.cpp  co1lab8.h
co2/co2lab1-2/src/main/java/: MyBinaryTree.java  MyList.java
co2/co2lab1-2/src/test/java/: MyBinaryTreeTests.java  (+1 more)
sem1/cw/: Database  Makefile  struct.cpp
sem1/lab3/: myutils.cpp
sem1/lab4/: prog.cpp
sem2/cw/: Makefile  main.cpp
sem2/cw/model/: model.hpp  struct.cpp  struct.hpp
sem2/cw/model/utils/: search.cpp
sem2/lab1/: co1lab7.cpp
sem2/lab2/: co1lab8.cpp
sem3/co2lab1-2/: .gitignore  pom.xml
sem5/lab1-2/ShitCode/: CMakeLists.txt  TypeManipulations.cpp  TypeManipulations.h  main.cpp
sem5/lab3/test/: CMakeLists.txt  main.cpp  pointBuffer.cpp  pointBuffer.hpp
sem5/lab4-5/: Makefile  keyb_int.c
sem6/oop/Lab1_2/: .gitignore  CMakeLists.txt  Lab1_2.pro
sem6/oop/Lab1_2/Model/MyMath/: Complex.cpp  Complex.hpp
sem6/oop/Lab1_2/Model/Solver/: ASolver.hpp  ComplexSolver.hpp  DoubleSolver.hpp
sem6/oop/Lab1_2/Tests/: UnitTests.cpp  catch.hpp
sem6/os/: .gitignore  lab1.cpp  lab3.cpp
sem6/os/lab2/: lab2_MUT.cpp  lab2_SEM.cpp
sem6/os/lab4/: first  lab4_1.cpp  lab4_2.cpp  makefile  out  second
sem6/os/lab5/: first  lab5_1.cpp  lab5_2.cpp  makefile  second
sem6/os/lab6/: first  lab6_1.cpp  lab6_2.cpp  makefile  second
sem6/os/lab7/: first  lab7_1.cpp  lab7_2.cpp  makefile  second
sem6/os/lab8/: CMakeLists.txt  lab8_1.cpp  lab8_2.cpp
(+2 files in other folders)
